# openweathermap_api

./: README.md  pyproject.toml
openweathermap_api/: auth.py  client.py  exceptions.py  models.py
