[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "openweathermap_api"
authors = [
    { name = "Artur Yasinskiy", email = "kozmozir.dev@protonmail.com" }
]
description = "Library to handle openweathermap api requests"
version = "2026.0.1"

dependencies = [
    "requests>=2.28.0"
]